fixed css for navbar on spacing for nav-links

--- a/src/Components/NavBar/NavBar.css
+++ b/src/Components/NavBar/NavBar.css
@@ -3,61 +3,42 @@
   justify-content: space-between;
   align-items: center;
   padding: 10px;
-  background-color: #183759;
+  background-color: #dbd4db;
 } 
 
 li {
   list-style: none;
   display: inline;
-  font-family: 'Comic Sans MS';
   padding-left: 25px;
 }
 
-/* .logo {
-  font-size: 2.0rem;
-  margin-right: 20px;
+@media(max-width: 400px) {
+  .navbar{
+      display: flex;
+      flex-direction: column;
+  }
 }
 
-/* .navbar {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 10px;
-  background-color: #183759;
+
+.navbar label, #burger {display: none;}
+
+@media screen and (max-width: 768px){
+  .navbar li{
+      display: block;
+      width: 100%;
+      box-sizing: border-box;
+  }
+  .navbar label{
+      display: inline-block;
+      color: white;
+      font-size: xx-large;
+      font-style: normal;
+      padding: 10px;
+  }
+  #nav-links{
+      display: none;
+  }
+  .navbar input:checked ~ #nav-links{
+      display: block;
+  }
 }
-
-.hamburger-icon {
-  display: flex;
-  align-items: center;
-  cursor: pointer;
-}
-
-.logo {
-  display: flex;
-  align-items: center;
-}
-
-.nav-links {
-  display: flex;
-  align-items: center;
-  gap: 20px;
-
-.line {
-  width: 25px;
-  height: 3px;
-  background-color: white;
-  margin: 2px auto; /* Adjust the margin to center the lines vertically
-  transition: transform 0.3s ease-in-out;
-}
-
-.hamburger-icon.active .line:nth-child(1) {
-  transform: rotate(45deg) translate(5px, 5px);
-}
-
-.hamburger-icon.active .line:nth-child(2) {
-  opacity: 0;
-}
-
-.hamburger-icon.active .line:nth-child(3) {
-  transform: rotate(-45deg) translate(5px, -5px);
-} */
